--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
 
     implementation "com.sparkjava:spark-core:2.9.4" // add to build.gradle (for Java users)
-    implementation "com.sparkjava:spark-kotlin:1.0.0-alpha" // add to build.gradle (for Kotlin users)
+    implementation "com.sparkjava:spark-template-mustache:2.7.1" // add to build.gradle (for Mustache)
 }
 
 application {
