--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,14 @@
  */
 
 plugins {
+    // Apply the java-library plugin for API and implementation separation.
+    id 'java'
+
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+
+    // https://imperceptiblethoughts.com/shadow/getting-started/
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
 repositories {
@@ -25,6 +31,10 @@ dependencies {
 
     implementation "com.sparkjava:spark-core:2.9.4" // add to build.gradle (for Java users)
     implementation "com.sparkjava:spark-template-mustache:2.7.1" // add to build.gradle (for Mustache)
+
+    implementation "org.apache.logging.log4j:log4j-api:2.19.0"
+    implementation "org.apache.logging.log4j:log4j-core:2.19.0"
+    implementation "org.apache.logging.log4j:log4j-slf4j-impl:2.19.0"
 }
 
 application {
